sumo/tests/jtrrouter/errors/default_arrivalspeed_false/errors.jtrrouter
Error: Invalid arrivalSpeed definition for option 'arrivalspeed';
 must be one of ("current", or a float>=0)
Quitting (on error).
